openturns/1.18/_sources/auto_graphs/plot_graphs_fill_area.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_graphs/plot_graphs_fill_area.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_graphs_plot_graphs_fill_area.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_graphs_plot_graphs_fill_area.py:


How to fill an area
===================

.. GENERATED FROM PYTHON SOURCE LINES 5-6

.. code-block:: default

    # sphinx_gallery_thumbnail_number = 2







.. GENERATED FROM PYTHON SOURCE LINES 9-10

In this example, we show how to fill specified area with a given color.

.. GENERATED FROM PYTHON SOURCE LINES 12-17

.. code-block:: default

    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 18-19

We generate a sample from a standard gaussian distribution.

.. GENERATED FROM PYTHON SOURCE LINES 21-25

.. code-block:: default

    dist = ot.Normal()
    graph = dist.drawPDF()
    view = viewer.View(graph)




.. image-sg:: /auto_graphs/images/sphx_glr_plot_graphs_fill_area_001.png
   :alt: plot graphs fill area
   :srcset: /auto_graphs/images/sphx_glr_plot_graphs_fill_area_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 26-37

.. code-block:: default



    def linearSample(xmin, xmax, npoints):
        '''Returns a sample created from a regular grid
        from xmin to xmax with npoints points.'''
        step = (xmax-xmin)/(npoints-1)
        rg = ot.RegularGrid(xmin, step, npoints)
        vertices = rg.getVertices()
        return vertices









.. GENERATED FROM PYTHON SOURCE LINES 38-41

.. code-block:: default

    a = 1.
    b = 2.








.. GENERATED FROM PYTHON SOURCE LINES 42-47

.. code-block:: default

    nplot = 100  # Number of points in the plot
    x = linearSample(a, b, nplot)
    y = dist.computePDF(x)









.. GENERATED FROM PYTHON SOURCE LINES 48-49

The following function uses the `PolygonArray` class to create a area filled with a given color.

.. GENERATED FROM PYTHON SOURCE LINES 51-65

.. code-block:: default

    def drawInTheBounds(vLow, vUp, n_test):
        '''
        Draw the area within the bounds.
        '''
        palette = ot.Drawable.BuildDefaultPalette(2)
        myPaletteColor = palette[1]
        polyData = [[vLow[i], vLow[i+1], vUp[i+1], vUp[i]]
                    for i in range(n_test-1)]
        polygonList = [ot.Polygon(
            polyData[i], myPaletteColor, myPaletteColor) for i in range(n_test-1)]
        boundsPoly = ot.PolygonArray(polygonList)
        return boundsPoly









.. GENERATED FROM PYTHON SOURCE LINES 66-67

Compute the bounds to fill: the lower vertical bound is zero and the upper vertical bound is the PDF.

.. GENERATED FROM PYTHON SOURCE LINES 69-72

.. code-block:: default

    vLow = [[x[i, 0], 0.] for i in range(nplot)]
    vUp = [[x[i, 0], y[i, 0]] for i in range(nplot)]








.. GENERATED FROM PYTHON SOURCE LINES 73-75

.. code-block:: default

    area = dist.computeCDF(b) - dist.computeCDF(a)








.. GENERATED FROM PYTHON SOURCE LINES 76-84

.. code-block:: default

    boundsPoly = drawInTheBounds(vLow, vUp, nplot)
    graph = dist.drawPDF()
    graph.add(boundsPoly)
    graph.setTitle("Area = %.3f" % (area))
    graph.setLegends([""])
    view = viewer.View(graph)
    plt.show()




.. image-sg:: /auto_graphs/images/sphx_glr_plot_graphs_fill_area_002.png
   :alt: Area = 0.136
   :srcset: /auto_graphs/images/sphx_glr_plot_graphs_fill_area_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 85-86

The CDF difference is equal to the area under the curve.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.223 seconds)


.. _sphx_glr_download_auto_graphs_plot_graphs_fill_area.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_graphs_fill_area.py <plot_graphs_fill_area.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_graphs_fill_area.ipynb <plot_graphs_fill_area.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
